--- a/css/main.styl
+++ b/css/main.styl
@@ -1043,6 +1043,9 @@ body
 /*fin footer*/
 .area-footer
     background-color rgba(white)
+    position absolute
+    bottom 0
+    width 100%
     text-align center
 /*Diseño de articulos*/
 
